fixed spacing with latest blog image

--- a/FrontEnd/src/css/homepage.css
+++ b/FrontEnd/src/css/homepage.css
@@ -214,7 +214,7 @@ nav {
 
 .latestblogimgcont {
     width: 100%;
-    height: 210px;
+    height: 16vw;
     overflow: hidden;
     border-top-left-radius: 15px;
     border-top-right-radius: 15px;
